[package]
description = "A project made in Rust that searches each and every possible way to get to a number in the least amount of steps with certains constraints."
authors = ["Adam Brutsaert <brutsaertadam@yahoo.fr>"]
name = "beltex"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
itertools = "0.10.5"
